--- a/src/Components/Image.css
+++ b/src/Components/Image.css
@@ -1,80 +1,146 @@
 .interactiveimages{
     display: flex;
+    flex-direction: column;
     height: 100vh;
-    background-color: black;
+    background-color: #2A2B2E;
+    background-image: url("black-golden-colored-wallpaper.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    align-items: center;
+}
+
+.generaltext{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.generaltext>h1{
+    font-size: 60px;
+    margin: 0;
+}
+
+.generaltext>p{
+    margin: 0;
 }
 
 .imagecontainer{
-    display: flexbox;
-    width: auto;
-    height: 200px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    column-gap: 1%;
+    row-gap: 10px;
+    width: 80%;
+    padding: 20px;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+    overflow-y: auto;
+}
 
+.imagecontainer::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #FAF9F6;
+    display: none;
 }
 
 .imagecontainer>button{
+    display: flex;
     font-size: 40px;
-    color: white;
     appearance: none;
     border-style: none;
     border-width: 0px;
-    border-color: black;
     border-image: none;
-    background-color: white;
-    
+    background-color: #FAF9F6;
+    transition: .3s;
+    height: 130px;
+    width: 115px;
+    justify-content: center;
+    filter: grayscale(100%);   
 }
+
 .buttonimage{
-    display: block;
-    max-height: 113px;
+    margin-top: 2%;
     object-fit: cover;
+    height: 75%;
+    width: 97%;
+    border-radius: 10px;
+}
+
+.grow{
+    visibility: visible !important;
+    scale: 1 !important;
 }
 
 
 .infobox{
     display: flex;
+    visibility: collapse;
+    scale: 0;
     flex-direction: column;
+    justify-content: space-evenly;
     top:50%;
     left:50%;
     transform: translate(-50%, -50%);
     position: absolute;
-    background-color: white;
-    height: 300px;
-    width: 300px;
+    background-color: #FAF9F6;
+    height: 600px;
+    width: 90%;
     z-index: 100;
     text-align: center;
     border-radius: 10px;
+    transition: .2s;
+    transform-origin: top left;
+    overflow-y: auto;
+    padding: 10px;
     
 }
 
-.infobox>div{
-    display: flex;
-    height: 60%;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
+.tint{
+    visibility: hidden;
+    pointer-events: none;
+    position: absolute;
     margin: 0;
-    background-color: black;
+    width: 100%;
+    height: 100%;
+    background-color: #00000098;
+
 }
 
-.infobackground{
-    position: relative;
-    object-fit: cover;
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-    filter: blur(8px);
+.infobox>h1{
+    color: black;
+    margin: 0px;
+}
+
+.infobox>p{
+    color: black;
+    font-size: 18px;
+    margin: 10px;
+    text-align: left;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    overflow-y:auto;
+}
+
+.infobox>p::-webkit-scrollbar{display: none;}
+
+.infobox>div{
+    display: flex;
+    height: 40%;
+    align-items: center;
+    justify-content: center;
+    margin: 30px;
+    background-color: #FAF9F6;
 }
 
 .infoimage{
     position: absolute;
-    max-height: 50%;
-    object-fit: contain;
+    height: 40%;
+    width: 90%;
+    object-fit: cover;
     z-index: 100;
     border-radius: 10px;
-
 }
+
 .slideimages{
     padding: 2%;
     background-color: black;
@@ -82,17 +148,50 @@
     display: flex;
     gap: 70px;
 }
-.infobox>p{
-    margin: 50px;
-    text-align: left;
-}
+
 
 @media only screen and (min-width: 992px) {
+
+    .imagecontainer{
+        column-gap: 5%;
+        row-gap: 5%;
+        width: 90%;
+        padding: 70px;
+        transform: translate(0px,-30px);
+    }
+
     .infobox{
         height: 500px;
         width: 500px;
     }
     .buttonimage{
-        max-height: 300px;
+        height: 77%;
+        width: 90%;
+    }
+
+    .imagecontainer>button{
+        height: 320px;
+        width: 330px;
+    }
+    .imagecontainer>button:hover{
+        transition: .3s;
+        transform: translate(-30px,-30px);
+        scale: 1.2;
+        filter: grayscale(0);
+        z-index: 100;
+        -webkit-box-shadow: 27px 34px 5px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 27px 34px 5px 0px rgba(0,0,0,0.75);
+        box-shadow: 27px 34px 5px 0px rgba(0,0,0,0.75);
+        
+    }
+    
+    .generaltext>h1{
+        font-size: 80px;
+        margin: 0;
+    }
+    
+    .generaltext>p{
+        font-size: 40px;
+        margin: 0;
     }
 }
